src/component/number_input/snapshots/envision__component__number_input__view_tests__view_editing.snap
---
source: src/component/number_input/view_tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────┐
│                         42_│
└────────────────────────────┘
