src/component/number_input/snapshots/envision__component__number_input__view_tests__view_editing_with_label.snap
---
source: src/component/number_input/view_tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────┐
│                    Qty: 42_│
└────────────────────────────┘
